# football-analytics

./: .gitignore  docker-compose.yml  pyproject.toml
dbt/: dbt_project.yml
dbt/models/silver/: stg_events.sql
scripts/: ingest_statsbomb.py
